fix production form from overflowing out of element div when all inputs have collapsed

--- a/public/app.css
+++ b/public/app.css
@@ -119,6 +119,8 @@ table.form-row {
     box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
     margin: 5px;
     /* overflow: auto; */
+    overflow-y: auto;
+    overflow-x: hidden;
     max-width: 90%;
     padding: 0.6rem;
 }
